apps/spliit/spliit.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spliit
  labels:
    app: spliit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spliit
  template:
    metadata:
      labels:
        app: spliit
        name: spliit
    spec:
      containers:
      - name: spliit
        image: registry.camsab.me/spliit:1.19.1
        imagePullPolicy: Always
