apps/spliit/ServiceMealie.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spliit
spec:
  selector:
    app: spliit
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: spliit
