apps/spliit/ServiceSpliit.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spliit
spec:
  selector:
    app: spliit
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: spliit
