apps/spliit/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spliit
  namespace: spliit
spec:
  entryPoints:
    - websecure
  routes:
      - kind: Rule
        match: "Host(`spliit.camsab.me`) && PathPrefix(`/groups/create`)"
        middlewares:
          - name: ak-outpost-proxy
            namespace: authentik
        priority: 11
        services: 
          - name: spliit
            port: 3000
      - kind: Rule
        match: "Host(`spliit.camsab.me`)"
        priority: 10
        services: 
          - name: spliit
            port: 3000
      # This part is only required for single-app setups
      - kind: Rule
        match: "Host(`spliit.camsab.me`) && PathPrefix(`/outpost.goauthentik.io/`)"
        priority: 15
        services:
          - name: ak-outpost-proxy
            namespace: authentik
            port: 9000
  tls:
    secretName: spliit
